--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,7 @@ $footer-bg-color: #1d1e18;
 $standard-margin: 20px;
 $section-border-height: 4px;
 $footer-height: 60px;
+$alternate-footer-height: 100px;
 
 $navbar-default-color: $heading-color;
 $navbar-default-link-color: $heading-color;
